--- a/src/app/settings-view/settings-view.component.html
+++ b/src/app/settings-view/settings-view.component.html
@@ -1,3 +1,5 @@
-<p>settings-view works!</p>
+<h1>Settings</h1>
+
+<h2>Video sources</h2>
 
 <app-video-sources-settings></app-video-sources-settings>
